[gd_scene load_steps=9 format=2]

[ext_resource path="res://gc.gd" type="Script" id=1]
[ext_resource path="res://VarelaRound-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://bensound-relaxing.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToWhite"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 2 )

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToBlack = SubResource( 1 )
anims/FadeToWhite = SubResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 336.0
margin_bottom = 192.0
color = Color( 0.341176, 0.517647, 0.721569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="P1_Background" type="ColorRect" parent="CanvasLayer"]
margin_right = 88.0
margin_bottom = 184.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p1_container" type="Node2D" parent="CanvasLayer"]
position = Vector2( 4.08952, 0 )

[node name="p1" type="Label" parent="CanvasLayer/p1_container"]
margin_right = 88.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "Player 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task" type="Label" parent="CanvasLayer/p1_container"]
margin_top = 32.0
margin_right = 88.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
text = "Task"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task_text" type="Label" parent="CanvasLayer/p1_container"]
margin_top = 56.0
margin_right = 88.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 4 )
text = "Move to the trigger area"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrls" type="Label" parent="CanvasLayer/p1_container"]
margin_top = 120.0
margin_right = 88.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrls_text" type="Label" parent="CanvasLayer/p1_container"]
margin_top = 144.0
margin_right = 88.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 5 )
text = "W - up, S - down"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2_Background" type="ColorRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_bottom = 184.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p2_container" type="Node2D" parent="CanvasLayer"]
position = Vector2( 236.907, 0 )

[node name="p1" type="Label" parent="CanvasLayer/p2_container"]
margin_right = 88.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "Player 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task" type="Label" parent="CanvasLayer/p2_container"]
margin_top = 32.0
margin_right = 88.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
text = "Task"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task_text" type="Label" parent="CanvasLayer/p2_container"]
margin_top = 56.0
margin_right = 88.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 4 )
text = "Move to the trigger area"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrls" type="Label" parent="CanvasLayer/p2_container"]
margin_top = 120.0
margin_right = 88.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrls_text" type="Label" parent="CanvasLayer/p2_container"]
margin_top = 144.0
margin_right = 88.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 5 )
text = "left/right arrows"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentLevel" type="Node2D" parent="."]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
